<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/leftVel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="left vel"/>

        <EditText
            android:id="@+id/leftDur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="left dur"/>

        <EditText
            android:id="@+id/rightVel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="right vel"/>

        <EditText
            android:id="@+id/rightDur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="right dur"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Move"
            android:onClick="setWheelMovement"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/wing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/left"
                android:text="left wing"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/right"
                android:text="right wing"/>
        </RadioGroup>

        <EditText
            android:id="@+id/targetPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="target angle"/>

        <EditText
            android:id="@+id/angVel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="angular vel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Move wing"
            android:onClick="setWingMovement"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="head red"/>

        <ToggleButton
            android:id="@+id/headRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="head blue"/>

        <ToggleButton
            android:id="@+id/headBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="head green"/>

        <ToggleButton
            android:id="@+id/headGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wing red"/>

        <ToggleButton
            android:id="@+id/wingRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wing blue"/>

        <ToggleButton
            android:id="@+id/wingBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wing green"/>

        <ToggleButton
            android:id="@+id/wingGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set LED"
            android:onClick="setLED"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/encoderTransmission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/encoderEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="enable"/>
            <RadioButton
                android:id="@+id/encoderDisabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="disable"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="set encoder transmission"
            android:onClick="setEncoderTransmission"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_touch_sensor"
            android:onClick="requestTouchSensor"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/touch_sensor_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_distance_sensor"
            android:onClick="requestDistanceSensor"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/distance_sensor_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_cliff_sensor"
            android:onClick="requestCliffSensor"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/cliff_sensor_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_battery_info"
            android:onClick="requestBatteryInfo"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/battery_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_encoder_count"
            android:onClick="requestEncoderCount"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/encoder_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>

